fix video rows wrapping

--- a/projects/packages/my-jetpack/_inc/components/product-interstitial/jetpack-ai/style.module.scss
+++ b/projects/packages/my-jetpack/_inc/components/product-interstitial/jetpack-ai/style.module.scss
@@ -208,6 +208,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: var(--spacing-base);
+		flex: 1;
 
 		.product-interstitial__usage-videos-heading {
 			font-size: 20px;
